--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-router": "^7.9.6",
+    "rehype-sanitize": "^6.0.0",
     "tailwindcss": "^4.1.17"
   },
   "devDependencies": {
